[package]
name = "the-portal"
version = "0.1.0"
edition = "2024"

[dependencies]

http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.20", features = [
    "http1",
    "http2",
    "server",
    "service",
    "tokio",
] }
rcgen = { version = "0.14.8", features = ["aws_lc_rs", "x509-parser"] }
rustls = "0.23.40"
rustls-pki-types = "1.14.1"
time = "0.3.47"
tokio = { version = "1.52.3", features = [
    "io-util",
    "fs",
    "net",
    "macros",
    "rt-multi-thread",
] }
tokio-rustls = "0.26.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
